syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

option go_package = "seeforme/proto/user";

message RegisterRequest {
    string email = 1;
    string password = 2;
    bool role = 3;                // true - волонтер, false - слепой
}

message RegisterResponse {
    int64 user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    bool role = 3;              // true - волонтер, false - слепой
}

message CheckJWTRequest {
    int64 user_id = 1;
    string token = 2;
}

message GetStatisticsRequest {}

message GetStatisticsResponse {
    int64 volunteers_count = 1;
    int64 blind_count = 2;
}

service User {
    rpc Register (RegisterRequest) returns (RegisterResponse) {}

    rpc Login (LoginRequest) returns (LoginResponse) {}

    rpc CheckJWT (CheckJWTRequest) returns (google.protobuf.Empty) {}
    
    rpc GetStatistics (GetStatisticsRequest) returns (GetStatisticsResponse) {}
}